fix cypress issue with configs file in v10

--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -19,7 +19,7 @@ on:
         description: 'Path to a JSON file where configuration values are set.'
         type: string
         required: false
-        default: cypress.json
+        default: cypress.config.ts
       env:
         description: 'Sets Cypress environment variables'
         type: string
